# 2025_P1_ExpenseFlow

./: .gitignore  README.md  ai.md  demo.md  docker-compose.test.yml  docker-compose.yml  libs.md  local.sh  redeploy.sh  test.sh  update_remote_imgs.sh
.github/ISSUE_TEMPLATE/: bug_report.md  bug_repot.yml  feature_request.md  feature_request.yml  task.md
.github/workflows/: analysis.yml  app_deployment.yml  backend.yml  backend_tests.yml  infrastructure.yml  infrastructure_deploy.yml  infrastructure_teardown.yml  tests.yml
api/: .dockerignore  .gitignore  Dockerfile  Dockerfile.test  README.md  local_plugin_config.yml  plugin_config.yml  pyproject.toml
api/src/api/: __init__.py  main.py
api/src/expenseflow/: __init__.py  config.py  deps.py  enums.py  errors.py  main.py  middleware.py  models.py  schemas.py  utils.py
api/src/expenseflow/audit/: models.py  routes.py  schemas.py  service.py
api/src/expenseflow/auth/: deps.py  service.py  utils.py
api/src/expenseflow/database/: __init__.py  base.py  core.py  deps.py  entities.py  expenses.py  service.py  utils.py
api/src/expenseflow/entity/: __init__.py  models.py  schemas.py  service.py
api/src/expenseflow/expense/: __init__.py  models.py  routes.py  schemas.py  service.py
api/src/expenseflow/expense_attachment/: __init__.py  deps.py  manager.py  models.py
api/src/expenseflow/expense_item/: __init__.py  models.py  routes.py  schemas.py  services.py
api/src/expenseflow/friend/: __init__.py  models.py  routes.py  schemas.py  service.py
api/src/expenseflow/group/: models.py  routes.py  schemas.py  service.py
api/src/expenseflow/group_expense/: __init__.py  routes.py
api/src/expenseflow/models/: __init__.py
api/src/expenseflow/plugin/: __init__.py  healthcheck_plugin.py  report_gen.py  s3_attachment_plugin.py  sentry.py  textract.py
api/src/expenseflow/plugin/textract/: __init__.py
api/src/expenseflow/plugins/: __init__.py  base.py  healthcheck_plugin.py  test_plugin.py
api/src/expenseflow/routers/: __init__.py  health.py
api/src/expenseflow/user/: models.py  routes.py  schemas.py  service.py
api/tests/: conftest.py  factories.py
api/tests/audit/: test_audit_routes.py  test_audit_service.py
api/tests/auth/: test_auth_deps.py  test_auth_service.py
api/tests/expense/: test_expense_routes.py  test_expense_service.py
api/tests/friends/: test_friend_routes.py  test_friend_service.py
api/tests/group/: test_group_routes.py  test_group_service.py
api/tests/plugins/: test_s3_attachment_plugin.py
api/tests/plugins/test_core/: test_dynamic_value.py  test_plugin_manager.py  test_plugin_property.py  test_plugin_registry.py
api/tests/user/: test_user_routes.py  test_user_service.py
flutter_frontend/: README.md  pubspec.yaml
flutter_frontend/ios/Runner.xcodeproj/: project.pbxproj
flutter_frontend/lib/common/: app_bar.dart  color_palette.dart  custom_button.dart  custom_divider.dart  proportional_sizes.dart
infra/: .gitignore  .terraform.lock.hcl  api.tf  assets.tf  auth0.tf  db.tf  deploy-infra.sh  domain.tf  locals.tf  main.tf  outputs.tf  sg.tf  teardown.sh  ui.tf  variables.tf
model/: plugin_diagram.asta
model/adrs/: TEMPLATE.md  adr_01_auth.md  adr_02_db_access_layer.md  adr_03_plugin_system.md  adr_04_backend_tooling.md  adr_others.md  approval_process_adr.md  core_domain_adr.md  db_layout_adr.md  dummy_adr  flutter_adr.md  orm_ard.md  plugins_adr.md
model/diagrams/: C4 Diagrams backup.drawio  DeploymentDiagram.drawio
ui/: .gitignore  Dockerfile  go.mod  main.go  pubspec.yaml
ui/ios/Runner/: Info.plist
ui/ios/Runner.xcodeproj/: project.pbxproj
ui/lib/: main.dart  types.dart
ui/lib/common/: app_bar.dart  bottom_nav_bar.dart  color_palette.dart  custom_button.dart  custom_divider.dart  custom_dropdown.dart  dialog_box.dart  icon_maker.dart  null_custom_dropdown.dart  proportional_sizes.dart  scan_receipt.dart  search_bar.dart  show_image.dart  snack_bar.dart  swipe_detector.dart  time_period_dropdown.dart  web_file_helper.dart
ui/lib/models/: entity.dart  entity.g.dart  (+9 more)
ui/web/: index.html  manifest.json
(+121 files in other folders)
