[project]
name = "expenseflow"
version = "0.1.0"
description = "ExpenseFlow API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[all]>=0.115.12",
    "loguru>=0.7.3",
    "pydantic>=2.11.3",
    "pyyaml>=6.0.2",
    "sqlalchemy[asyncio]>=2.0.40",
    "types-pyyaml>=6.0.12.20250402",
]

[dependency-groups]
dev = ["mypy>=1.15.0", "ruff>=0.11.6"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
