[project]
name = "expenseflow"
version = "0.1.0"
description = "ExpenseFlow API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "boto3>=1.38.17",
    "fastapi[all]>=0.115.12",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.11.3",
    "pyjwt[crypto]>=2.10.1",
    "pyyaml>=6.0.2",
    "sqlalchemy[asyncio]>=2.0.40",
    "types-boto3>=1.38.17",
    "types-pyyaml>=6.0.12.20250402",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "polyfactory>=2.21.0",
    "psycopg2-binary>=2.9.10",
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.6",
    "sqlalchemy-utils>=0.41.2",
    "types-sqlalchemy-utils>=1.1.0",
]

[tool.pytest.ini_options]
pythonpath = "src"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = ["ignore::DeprecationWarning"]


[tool.mypy]
mypy_path = "src"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213", "COM812"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/factories.py" = ["D101"]
"tests/conftest.py" = ["D103"]
"tests/*" = ["INP001"]
[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "S101",    # asserts allowed in tests...
    "ARG",     # Unused function args -> fixtures
    "FBT",     # Don't care about booleans as positional arguments in tests
    "PLR2004", # Magic values
    "INP001",  # No __init__.py files
    "ANN201",
    "D103",
    "PT023",
    "PT001",
]
